# pygriddler

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  zensical.toml
.github/actions/mkdocs_build/: action.yaml
.github/workflows/: docs.yaml  mkdocs.yaml  mkdocs_build.yaml  mkdocs_deploy.yaml  pytest.yaml  run_pytest.yaml
api/: index.html
core_concepts/: index.html
docs/: core_concepts.md  griddle.md  griddle_0_2.md  griddles.md  index.md  reference.md
griddle/: index.html
griddler/: __init__.py  __main__.py  console.py  core.py  griddle.py  schema.json
griddler/schemas/: v01.py
griddler/schemas/v03/: __init__.py  schema.json
griddler/schemas/v04/: __init__.py  schema.json
griddles/: index.html
reference/: index.html
search/: search_index.json
tests/: __init__.py  test_griddle.py  test_griddle_v01.py  test_griddle_v04.py  test_main.py  test_parameter_set.py  test_replicated.py  test_run_squash.py  test_schema.py
tests/fixtures/: test_griddle_test_multiple_grid_nested.json  test_griddle_test_multiple_grid_nested.yaml
tests/griddle/: test_v03.py  test_v04.py
