[tool.poetry]
name = "griddler"
version = "0.3.0"
description = ""
authors = ["Scott Olesen <ulp7@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
jsonschema = "^4.23.0"
networkx = "^3.4.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.28"
mkdocstrings-python = "^1.10.5"
mdx-truly-sane-lists = "^1.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
