[project]
name = "griddler"
version = "0.4.0"
description = ""
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.1,<7",
    "jsonschema>=4.23.0,<5",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.0,<2",
    "mkdocstrings[python]>=0.25.1,<0.26",
    "mkdocs-material>=9.5.28,<10",
    "mkdocstrings-python>=1.10.5,<2",
    "mdx-truly-sane-lists~=1.3",
    "pytest>=8.3.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
