[project]
name = "griddler"
version = "0.4.0"
description = ""
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.1,<7",
    "jsonschema>=4.23.0,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
]
docs = [
    "mdx-truly-sane-lists~=1.3",
    "mkdocstrings-python>=1.10.5,<2",
    "zensical>=0.0.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
griddler = "griddler.__main__:main"
